--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
     <groupId>cn.leancloud</groupId>
     <artifactId>kafka-java-consumer</artifactId>
     <version>0.0.2-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <description>A kafka consumer client for Java.</description>
@@ -24,6 +25,8 @@
 
     <developers>
         <developer>
+            <name>LeanCloud Engineer</name>
+            <email>eng@leancloud.rocks</email>
             <organization>LeanCloud</organization>
             <organizationUrl>https://leancloud.cn/</organizationUrl>
         </developer>
@@ -210,9 +213,17 @@
                 <configuration>
                     <serverId>ossrh</serverId>
                     <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>false</autoReleaseAfterClose>
-                    <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.0.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
