--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,14 @@
         </snapshotRepository>
     </distributionManagement>
 
+    <properties>
+        <maven.javadoc.skip>true</maven.javadoc.skip>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+        <skipTests>false</skipTests>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.kafka</groupId>
@@ -136,8 +144,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
                     <useIncrementalCompilation>false</useIncrementalCompilation>
                     <compilerArgs>
                         <arg>-parameters</arg>
@@ -159,7 +167,12 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.0.1</version>
                 <configuration>
-                    <source>8</source>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <detectOfflineLinks>true</detectOfflineLinks>
+                    <breakiterator>true</breakiterator>
+                    <author>false</author>
+                    <keywords>true</keywords>
+                    <skip>${maven.javadoc.skip}</skip>
                 </configuration>
                 <executions>
                     <execution>
@@ -232,6 +245,20 @@
 
     <!-- profile definitions -->
     <profiles>
+        <profile>
+            <id>ci-install</id>
+            <properties>
+                <skipTests>true</skipTests>
+                <maven.javadoc.skip>true</maven.javadoc.skip>
+            </properties>
+        </profile>
+        <profile>
+            <id>ci-test</id>
+            <properties>
+                <dependency.test.skip>false</dependency.test.skip>
+                <maven.javadoc.skip>true</maven.javadoc.skip>
+            </properties>
+        </profile>
         <!-- GPG Signature on release -->
         <profile>
             <id>release-sign-artifacts</id>
