--- a/pom.xml
+++ b/pom.xml
@@ -244,6 +244,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.5</version>
                 <configuration>
                     <skip>${module.jacoco.skip}</skip>
                 </configuration>
@@ -258,7 +259,7 @@
                         <id>default-report</id>
                         <phase>test</phase>
                         <goals>
-                            <goal>report-aggregate</goal>
+                            <goal>report</goal>
                         </goals>
                     </execution>
                 </executions>
