--- a/pom.xml
+++ b/pom.xml
@@ -287,7 +287,7 @@
         </profile>
         <!-- GPG Signature on release -->
         <profile>
-            <id>release-sign-artifacts</id>
+            <id>release</id>
             <activation>
                 <property>
                     <name>performRelease</name>
