--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,7 @@
                     <author>false</author>
                     <keywords>true</keywords>
                     <skip>${maven.javadoc.skip}</skip>
+                    <doclint>none</doclint>
                 </configuration>
                 <executions>
                     <execution>
